fix input wrong color

--- a/core/input.less
+++ b/core/input.less
@@ -18,7 +18,6 @@
     }
     &:focus {
         border: 1px @border-focus-color solid;
-        color: @text-primary-color;
         outline: none;
     }
     &:focus[readonly], &:focus[disabled] {
@@ -31,7 +30,6 @@
 
     &.kuma-input-focus {
         border: 1px @border-focus-color solid;
-        color: @text-primary-color;
         outline: none;
     }
     &::placeholder {
