--- a/demo/css/demo.css
+++ b/demo/css/demo.css
@@ -1978,7 +1978,6 @@ a.kuma-button {
 .kuma-input:focus,
 .kuma-textarea:focus {
   border: 1px rgba(31, 56, 88, 0.6) solid;
-  color: rgba(0, 0, 0, 0.6);
   outline: none;
 }
 .kuma-input:focus[readonly],
@@ -1995,7 +1994,6 @@ a.kuma-button {
 .kuma-input.kuma-input-focus,
 .kuma-textarea.kuma-input-focus {
   border: 1px rgba(31, 56, 88, 0.6) solid;
-  color: rgba(0, 0, 0, 0.6);
   outline: none;
 }
 .kuma-input::-webkit-input-placeholder,
